--- a/000-main.tex
+++ b/000-main.tex
@@ -51,7 +51,7 @@
 \newtheorem{ex}{Example}% from `amsthm'
 \newtheorem{prob}{Problem}% from `amsthm'
 \newtheorem{ques}{Question}% from `amsthm'
-\newtheorem*{note}{Note}% from `amsthm'
+% \newtheorem*{note}{Note}% from `amsthm'
 \newtheorem*{hint}{Hint}% from `amsthm'
 
 
@@ -110,6 +110,7 @@
 \newtcolorbox{marker}[1][]{marker=yellow,#1}
 \newtcolorbox{important}[1][]{marker=red,#1}
 \newtcolorbox{cnote}[1][]{marker=orange,#1}
+\newtcolorbox{note}[1][]{marker=white,#1}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % METADATA
