--- a/005-titlepage.tex
+++ b/005-titlepage.tex
@@ -9,10 +9,13 @@
 \begin{titlepage}
 {
     \centering
-    \includegraphics[width=0.9\textwidth]{institution-logo}
+    % \includegraphics[width=0.9\textwidth]{institution-logo}
     \null%
-    \vspace{3em}
-    {\Huge \bfseries \@title \par}
+    % \vspace{3em}
+    \vspace{13em}
+    {\Huge \bfseries \@title \\[1em]
+      \Large \scshape Lecture Notes
+    \par}
     \vspace{2em}
     {\large \scshape \@date \par}
     \vfill
@@ -22,7 +25,8 @@
     \vspace{5em}
 
     \vfill
-    {\raggedleft \large \@author \par}
+    {\raggedleft \large Notes Author: \@author \par}
+    % {\raggedleft \large Instructor: Lluís Belanche \par}
 }
 \end{titlepage}
 \makeatother
