--- a/001-preamble.tex
+++ b/001-preamble.tex
@@ -48,7 +48,8 @@
 %% COMMON
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\usepackage{color, xcolor}     % more colors
+\usepackage{color}     % more colors
+\usepackage[dvipsnames]{xcolor}
 
 \usepackage{graphicx}   % graphics
 \graphicspath{{./figures/}}
