--- a/004-coverpage.tex
+++ b/004-coverpage.tex
@@ -106,9 +106,13 @@
 
 
 	%%%%%%%%%%%%%%%%%%%% Title of the Report %%%%%%%%%%%%%%%%%%%%
+	\node[left,RoyalBlue!5,minimum width=0.725*\paperwidth,minimum height=3cm, rounded corners] at ($(current page.north east)+(0,-6)$)
+	{
+		{\fontsize{25}{30} \selectfont \bfseries Advanced}
+	};
 	\node[left,RoyalBlue!5,minimum width=0.725*\paperwidth,minimum height=3cm, rounded corners] at ($(current page.north east)+(0,-7.5)$)
 	{
-		{\fontsize{25}{30} \selectfont \bfseries \@title}
+		{\fontsize{25}{30} \selectfont \bfseries Machine Learning}
 	};
 
 	%%%%%%%%%%%%%%%%%%%% Subtitle %%%%%%%%%%%%%%%%%%%%
