--- a/2022-09-12.tex
+++ b/2022-09-12.tex
@@ -226,7 +226,7 @@ Where:
 	\emph{bias-variance dilemma}.
 \end{prop}
 
-\paragraph{Remainder}
+\paragraph{Reminder}
 
 Given a dataset \(D = \{x^i,\, y^i\}\) of size \(n\) \((x^i,\, y^i)\sim p\) We
 choose a loss function \(L\) and a hypothesis space \(\mathcal F\).
