--- a/theory/rkhs.tex
+++ b/theory/rkhs.tex
@@ -171,8 +171,8 @@ And a dataset $\mathcal{D} = \{x^1, \dots, x^n\}$.
         and add them to the space.
 \end{itemize}
 
-\begin{definition}{Span of a set}{}
-	\iemph{Span of a set} is the set of all linear combinations of the elements of the set.
+\begin{definition}{Span of a set}{}\index{Span of a set}
+	The set of all linear combinations of the elements of the set.
 \end{definition}
 
 \begin{theorem}{Representer theorem}{}
