--- a/001-preamble.tex
+++ b/001-preamble.tex
@@ -51,6 +51,7 @@
 \usepackage{color}     % more colors
 \usepackage[dvipsnames]{xcolor}
 
+
 \usepackage{graphicx}   % graphics
 \graphicspath{{./figures/}}
 
@@ -204,3 +205,33 @@
 %% \monthyeardate\today gives the date without the day
 %\newdateformat{monthyeardate}{%
     %\monthname[\THEMONTH], \THEYEAR}
+
+% Set default figure size
+\setkeys{Gin}{width=.9\textwidth, keepaspectratio}
+
+\usepackage{fancyhdr}
+\usepackage{relsize}
+
+% Center figures by default
+\makeatletter
+\g@addto@macro\@floatboxreset\centering
+\makeatother
+
+\usepackage[normalem]{ulem}
+\usepackage{dsfont}
+\usepackage{tikz}
+% \usepackage{tikzexternal}
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.18}
+
+\usetikzlibrary{shapes,arrows,positioning,calc}
+\usetikzlibrary{arrows.meta}
+\tikzset{>={Latex[width=3mm,length=3mm]}}
+
+\usepackage{cancel}
+\usepackage{mathrsfs}
+
+\DeclareMathOperator{\argmin}{argmin}
+\DeclareMathOperator{\argmax}{argmax}
+
+\directlua{require("lua/hyphenate_all")}
